# zenlT.github.io

./: README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  pages.yml
site/: index.html
src/calc_service/: __init__.py  service.py
tests/: test_service.py
